2003-03-03	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Incorporated Max Horn's patches for a variety of 
      enhancements and fixes for some bugs and memory leaks.
      

2003-03-02	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed a screen update bug. Sometimes screen HAS to be 
      updated even if minIndex == [BUFFER length], e.g. when 
      doing ^u on the last line.
      

2003-03-01	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed a warning bell orientation bug.
    

2003-02-28	fabian
    * Fixed a bug that cause incorrect screen update
      in BUFFER mode
      
2003-02-27	fabian
    * Fixed cursor code in ARRAY mode
    * Fixed more double-width character stuff in ARRAY mode, 
      display should be fully working now
    * We now use the taller one between font and nafont to
      decide the lineHeight.
    * Fixed bugs in scrollUp and scrollDown in ARRAY mode
    * Added some #ifdef to make code compatible in BUFFER mode.
    
2003-02-26	fabian
    * Fixed general double-width character processing in ARRAY mode
    * Fixed "last line missing" bug in ARRAY mode
    * Fixed "clearBuffer" bug in BUFFER mode
    * Fixed scrolling bug that messes up display in ARRAY mode
    
2003-02-25	fabian
    * Further optimization of BUFFER method by updating
      less portion of screen
    * Fixed a showCursor bug
      
2003-02-24	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added highly experimental code to do custom drawing 
      for high speed. Still very buggy. To enable the 
      code, turn on the USE_CUSTOM_DRAWING flag in 
      PseudoTerminal.m, turn on the DEBUG_USE_ARRAY 
      and turn off the DEBUG_USE_BUFFER flags in VT100Screen.m
      
    * Fixed a problem causing huge CPU usage when displaying 
      the bell in tab. Now displaying only if there is a 
      change.
      

2003-02-24	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed and simplified screen updating code.

2003-02-24	fabian